--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,12 @@
 services:
   - type: web
     name: soccer-visualizer
-    env: static
+    env: node
     buildCommand: npm install && npm run build
-    staticPublishPath: ./dist
+    startCommand: npm start
+    envVars:
+      - key: VITE_API_KEY
+        sync: false
     headers:
       - path: /*
         name: Cache-Control
