--- a/render.yaml
+++ b/render.yaml
@@ -5,12 +5,16 @@ services:
     buildCommand: npm install && npm run build
     startCommand: npm start
     envVars:
+      - key: NODE_ENV
+        value: production
       - key: VITE_API_KEY
         sync: false
     headers:
       - path: /*
         name: Cache-Control
         value: no-cache
+    healthCheckPath: /api/health
+    autoDeploy: true
     routes:
       - type: rewrite
         source: /*
